--- a/index.html
+++ b/index.html
@@ -62,12 +62,43 @@
              I’m also a gamer at heart — which probably explains the procrastinating part.
           </p>
           <h3 class="text-2xl font-semibold mb-4">My Skills</h3>
-          <div class="flex flex-wrap gap-4 mb-8">
-            <span class="bg-indigo-100 text-indigo-800 px-4 py-2 rounded-full">Knows a bit of Python 🐍</span>
-            <span class="bg-indigo-100 text-indigo-800 px-4 py-2 rounded-full">Knows some HTML/CSS 🎨</span>
-            <span class="bg-indigo-100 text-indigo-800 px-4 py-2 rounded-full">Certified Vibe Coder ✨</span>
-            <span class="bg-indigo-100 text-indigo-800 px-4 py-2 rounded-full">Pro Gamer (in my head) 🎮</span>
-          </div>
+          <div class="space-y-6">
+                <!-- Python -->
+                <div>
+                    <p class="font-medium mb-2">Python</p>
+                    <div class="progress-bar group">
+                    <div class="progress-fill w-2/3 bg-indigo-600"></div>
+                    <span class="progress-text">(Can Google errors fast)</span>
+                    </div>
+                </div>
+
+                <!-- HTML/CSS -->
+                <div>
+                    <p class="font-medium mb-2">HTML/CSS</p>
+                    <div class="progress-bar group">
+                    <div class="progress-fill w-3/4 bg-green-500"></div>
+                    <span class="progress-text">(90% divs, 10% vibes)</span>
+                    </div>
+                </div>
+
+                <!-- Vibe Coder -->
+                <div>
+                    <p class="font-medium mb-2">Vibe Coder</p>
+                    <div class="progress-bar group">
+                    <div class="progress-fill w-full bg-yellow-500"></div>
+                    <span class="progress-text">(Certified chill)</span>
+                    </div>
+                </div>
+
+                <!-- Gamer -->
+                <div>
+                    <p class="font-medium mb-2">Gamer</p>
+                    <div class="progress-bar group">
+                    <div class="progress-fill w-full bg-pink-500"></div>
+                    <span class="progress-text">(Procrastination Overlord)</span>
+                    </div>
+                </div>
+            </div>
         </div>
       </div>
     </div>
